--- a/chess2/index.html
+++ b/chess2/index.html
@@ -11,7 +11,7 @@
     <script src="vendor/pixi-sound.js"></script>
 </head>
 
-<div id="stats-container" class="pill-container top-left">
+<div id="stats-container" class="pill-container top-left hidden">
 
     <div id="white-stats" class="stats-row"></div>
     <div id="black-stats" class="stats-row"></div>
